# PiBox-DesktopApp

./: CMakeLists.txt  PiBox.qmlproject  PiBox.qmlproject.qtds  PiBox.qmlproject.qtds.ef4529e  README.md  ludocontroller.cpp  ludocontroller.h  ludoworker.cpp  ludoworker.h  main.qml  okeycontroller.cpp  okeycontroller.h  okeyworker.cpp  okeyworker.h  pibox.rc  piboxicon.rc  qmlmodules  resources.qrc  socket.cpp  socket.cpp.autosave  socket.h
PiBox/: CMakeLists.txt  PiBox.qmlproject.qtds  ludocontroller.cpp  ludocontroller.h  ludoworker.cpp  okeyworker.cpp  qmlmodules  socket.cpp  socket.h
PiBox/asset_imports/Quick3DAssets/: CMakeLists.txt
PiBox/content/: App.qml  CMakeLists.txt  Game_Choose_Screen.qml  Login_screen.qml  Ludo_game_screen.qml  Okey_game_screen.qml  Okey_loby_screen.qml  Screen01.qml  Screen01.ui.qml  ludoclass.h
PiBox/src/: import_qml_plugins.h  main.cpp
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/Ludo0/: Ludo0.qml  Ludo0.qml.autosave.HFtcDx  qmldir
build-PiBox-Desktop_Qt_6_6_0_MinGW_64_bit-MinSizeRel/: qtcsettings.cmake
content/: App.qml  CMakeLists.txt  Game_Choose_Screen.qml  Game_Choose_Screen.qml.autosave  Game_test.qml  Leader_board.qml  Leader_board.qml.autosave  Loby_Screen.ui.qml  Login_screen.qml  Login_screen.ui.qml  Ludo_Loby_Screen.qml  Ludo_game_screen.qml  Okey_loby_screen.qml  Progress_bar.qml  Screen01.qml  Screen01_copy.ui.qml  ludoclass.cpp  ludocontroller.cpp  ludocontroller.h
imports/: CMakeLists.txt
imports/PiBox/: CMakeLists.txt  qmldir
src/: import_qml_plugins.h  main.cpp  main.h
(+89 files in other folders)
